# rust_web_api

./: .env  Cargo.toml  README.md
migrations/: 20250715213433_wallet.down.sql  20250715213433_wallet.up.sql
src/: config.rs  db.rs  errors.rs  main.rs  middleware.rs  router.rs  update_pin_request.rs  wallet_controller.rs  wallet_model.rs  wallet_repository.rs  wallet_services.rs
