[package]
name = "wallet-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
actix-rt = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
dotenvy = "0.15"
env_logger = "0.11.7"
futures-util = "0.3"
openssl-probe = "0.1"
sqlx = { version = "0.8.6", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid", "json",  "bigdecimal"] }
utoipa = { version = "5.3.0", features = ["actix_extras", "chrono"] }
bigdecimal = { version = "0.4", features = ["serde"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
